# Batu_theChessEngine

./: .gitignore  CMakeLists.txt  README.md  functions.cpp  main.cpp
headers/: arrays.hpp  constants.h  constants.hpp  enums.h  enums.hpp  functions.h  magic_numbers.h  magic_numbers.hpp
include/: attacks.hpp  magic_numbers.hpp  movegen.hpp  nn_eval.hpp  position.hpp  search.hpp  tt.hpp  types.hpp  uci.hpp
namespaces/: namespace_initializeFuncs.cpp  namespace_magicNumberFuncs.cpp  namespace_maskPieceFuncs.cpp  namespace_printFuncs.cpp  namespace_staticFuncs.cpp  namespace_testFuncs.cpp  namespace_uciFuncs.cpp
training/: train.py
